--- a/README.rdoc
+++ b/README.rdoc
@@ -2,8 +2,9 @@
 
 {<img src="https://codeclimate.com/github/ctlong/address_geocoder/badges/gpa.svg" />}[https://codeclimate.com/github/ctlong/address_geocoder]
 
-AddressGeocoder is a gem allowing you to validate and geocode addresses. All validations are done using Google's Geocoding API.
-Currently it can validate that the inputted address exists and return a formatted version.
+AddressGeocoder is a gem allowing you to validate and geocode addresses. All validations are done using {Google's Geocoding API}[https://developers.google.com/maps/documentation/geocoding/intro].
+Although an {API key}[https://developers.google.com/maps/documentation/geocoding/get-api-key] is not required, it is recommended to track usage and upgrade your call limit if required.
+Google provides a maximum of 2,000 calls per day to either your IP address or API key.
 
 == Information
 
