feat(travis): added travis build button to readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,7 @@
 == AddressGeocoder
 
 {<img src="https://codeclimate.com/github/ctlong/address_geocoder/badges/gpa.svg" />}[https://codeclimate.com/github/ctlong/address_geocoder]
+{<img src="https://travis-ci.org/ctlong/address_geocoder.svg?branch=master" />}[https://travis-ci.org/ctlong/address_geocoder.svg?branch=master]
 
 AddressGeocoder is a gem allowing you to validate and geocode addresses. All validations are done using {Google's Geocoding API}[https://developers.google.com/maps/documentation/geocoding/intro].
 Although an {API key}[https://developers.google.com/maps/documentation/geocoding/get-api-key] is not required, it is recommended to track usage and upgrade your call limit if required.
