--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,7 @@
 
 {<img src="https://codeclimate.com/github/ctlong/address_geocoder/badges/gpa.svg" />}[https://codeclimate.com/github/ctlong/address_geocoder]
 {<img src="https://travis-ci.org/ctlong/address_geocoder.svg?branch=master" />}[https://travis-ci.org/ctlong/address_geocoder.svg?branch=master]
+{<img src="https://badge.fury.io/rb/address_geocoder.svg" alt="Gem Version" />}[https://badge.fury.io/rb/address_geocoder]
 
 <b>AddressGeocoder</b> is a Ruby interface to certain Maps APIs that allow you to validate and geocode addresses.
 
